# contextualSpellCheck

./: pyproject.toml
.github/workflows/: python-package.yml
RESTAPI/: modelAPI.py
contextualSpellCheck/: __init__.py  contextualSpellCheck.py
contextualSpellCheck/tests/: test_contextualSpellCheck.py
examples/: en_example.py  ja_example.py
